# Wtf-is-a-working-cam

./: .apt-dependencies  .clang-format  .gitignore  .key-config  CMakeLists.txt  Makefile  README.md  TODO.md
.github/workflows/: Build.yml  Deploy.yml  Merge.yml
dependencies/gifdec/: gifdec.c
src/: Main.cpp
src/CamShit/: CamShit.cpp  CamShit.hpp
src/Camera/: Camera.cpp  Camera.hpp
src/Display/: Sdl2.cpp  Sdl2.hpp
src/Effects/: AEffect.hpp  IEffect.hpp
src/Effects/ColorScales/: ColorScales.cpp  ColorScales.hpp  ColorScalesConfig.hpp
src/Effects/Random/FlyEffect/: FlyEffect.cpp  FlyEffect.hpp  FlyEffectConfig.hpp
src/Effects/Random/FlyEffects/: Test.cpp
src/Effects/Random/MiddleDuplication/: MiddleDuplication.cpp  MiddleDuplication.hpp  MiddleDuplicationConfig.hpp
src/Effects/Random/RedBlueHue/: Test.cpp  Test.hpp
src/Effects/Random/SquareSplit/: SquareSplit.cpp  SquareSplit.hpp  SquareSplitConfig.hpp
src/Effects/Random/Tests/: Test.cpp  Test.hpp
src/Effects/Reverse/: Reverse.cpp  Reverse.hpp  ReverseConfig.hpp
src/Effects/Reverse/Horizontal/: Horizontal.cpp  Horizontal.hpp
src/Effects/Reverse/Vertical/: Vertical.cpp  Vertical.hpp
src/Effects/Texture/Image/: Image.cpp  Image.hpp  ImageConfig.hpp
src/Effects/Texture/Video/: Video.cpp  Video.hpp  VideoConfig.hpp
src/Enum/: EnumPlan.hpp
src/Parser/: Parser.cpp  Parser.hpp
src/Parser/Utils/: ParamUtils.hpp
src/VirtualCamera/: VirtualCamera.cpp  VirtualCamera.hpp
